Revert "ライブラリインポート時のエラーが出ないように、競合を解決"
This reverts commit e2c07ef5a0d9fe1ce0c46dec4e79ddcd300477a7.

--- a/requirements-colab.txt
+++ b/requirements-colab.txt
@@ -1,13 +1,12 @@
-# LLM迎合性分析 - Google Colab最適化版依存関係 (2024年10月対応版)
+# LLM迎合性分析 - Google Colab最適化版依存関係
 # =====================================================
 # 
 # この requirements-colab.txt は Google Colab 環境に最適化されており、
-# 2024年10月時点でのバージョン競合問題を解決するために更新されています。
+# インストール時のハングアップ問題を解決するために設計されています。
 #
 # 特徴:
 # - 段階的インストールのための最小限の依存関係
-# - Google Colab 2024年10月環境との互換性確保
-# - pandas 2.2.2, numpy 2.0+, httpx 0.28+ 対応
+# - バージョン競合を避けるための固定バージョン
 # - Colab の事前インストールライブラリとの競合回避
 # - メモリ効率化を重視した軽量構成
 
@@ -20,10 +19,10 @@ torch>=2.0.0,<2.5.0
 torchvision>=0.15.0,<0.20.0
 torchaudio>=2.0.0,<2.5.0
 
-# HuggingFace ecosystem (Colab 2024年10月対応版)
-transformers>=4.35.0,<4.50.0
-tokenizers>=0.14.0,<0.25.0
-accelerate>=0.24.0,<0.40.0
+# HuggingFace ecosystem (必須)
+transformers>=4.35.0,<4.45.0
+tokenizers>=0.14.0,<0.20.0
+accelerate>=0.24.0,<0.35.0
 
 # ========================================
 # Phase 2: SAE Analysis Core (核心機能)
@@ -37,9 +36,9 @@ transformer-lens>=2.0.0,<2.15.0
 # Phase 3: Data & Computation (基本機能)
 # ========================================
 
-# NumPy ecosystem (Colab 2024年10月対応版)
-numpy>=2.0.0,<2.3.0
-pandas>=2.2.0,<2.3.0
+# NumPy ecosystem (軽量バージョン)
+numpy>=1.24.0,<1.27.0
+pandas>=1.5.0,<2.2.0
 
 # ========================================
 # Phase 4: Visualization & UI (可視化)
@@ -78,21 +77,17 @@ jsonlines>=3.1.0,<4.0.0
 # 重要な注意事項
 # ========================================
 #
-# 1. バージョン範囲指定の理由 (2024年10月更新):
-#    - Google Colab 2024年10月環境での競合解決を優先
-#    - pandas 2.2.2, numpy 2.0+, httpx 0.28+ への対応
+# 1. バージョン範囲指定の理由:
+#    - 最新版への自動アップデートによる互換性問題を防止
 #    - セキュリティアップデートは受け入れつつ、破壊的変更を回避
 #
 # 2. triton除外の理由:
 #    - ソースからのビルドが必要な場合があるため、インストール時間が極端に長い
 #    - PyTorchインストール時に自動的に適切なバージョンが選択される
 #
-# 3. Colab事前インストールライブラリとの競合回避 (2024年10月対応):
-#    - Google Colab 2024年10月環境では pandas==2.2.2 が必須
-#    - opencv-python系が numpy>=2.0.0 を要求
-#    - google-genai, firebase-admin が httpx==0.28.1 を要求
-#    - plum-dispatch が beartype>=0.16.2 を要求
-#    - 明示的に正しいバージョンをインストールして競合を回避
+# 3. Colab事前インストールライブラリとの競合回避:
+#    - Colabには多くのライブラリが事前インストールされているため、
+#      明示的に必要なもののみをインストールして競合を回避
 #
 # 4. 段階的インストール推奨:
 #    - transformer-lens と beartype の競合を避けるため段階的インストールが必要
@@ -103,12 +98,3 @@ jsonlines>=3.1.0,<4.0.0
 # 5. メモリ効率化:
 #    - 不要なライブラリを除外してRAM使用量を最小化
 #    - T4 GPU (15GB VRAM) での安定動作を重視
-
-# ========================================
-# Phase 6: Dependency Conflict Resolution (依存関係競合解決)
-# ========================================
-
-# Colab 2024年10月環境での競合解決
-httpx>=0.28.0,<1.0.0     # google-genai, firebase-admin との競合解決
-# beartype>=0.14.0,<1.0.0  # plum-dispatch との競合解決（transformer-lensと競合するため段階的インストールで対処）
-zstandard>=0.23.0,<1.0.0 # langsmith との競合解決
