copilot-instructions.mdの内容を更新し、特徴取得と分析手法を明確化。因果分析の手法をAttribution Patchingに変更。 .gitignoreに.github/を追加。

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ launcher_colab.ipynb
 sycophancy_analysis_colab.ipynb
 are_you_sure_sycophancy_analysis.ipynb
 feedback_sycophancy_analysis.ipynb
+.github/
